[gd_scene load_steps=7 format=2]

[ext_resource path="res://mini_game/mini_game_yield/mini_game_yield.gd" type="Script" id=1]
[ext_resource path="res://mini_game/mini_game_yield/img/bg3.png" type="Texture" id=2]
[ext_resource path="res://font/BoonTookMon-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://mini_game/mini_game_default/img/bg_tutorial.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 250, 20 )

[node name="mini_game_yield" type="PopupDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -57.5
margin_right = 128.0
margin_bottom = 57.5
script = ExtResource( 1 )

[node name="texture_rect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
texture = ExtResource( 2 )

[node name="yield_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.5
margin_top = -12.0
margin_right = 29.5
margin_bottom = 12.0
text = "เก็บเกี่ยว"

[node name="help_label" type="Label" parent="."]
margin_left = 1.0
margin_top = 115.5
margin_right = 255.0
margin_bottom = 129.5
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 8 )
text = "กดปุ่มเพื่อเก็บเกี่ยว"
align = 1
valign = 1

[connection signal="about_to_show" from="." to="." method="_on_mini_game_yield_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_mini_game_yield_popup_hide"]
[connection signal="pressed" from="yield_button" to="." method="_on_yield_button_pressed"]
